# duckdb

./: CMakeLists.txt  Makefile  failed_tests.txt  generated_failures.json
.github/workflows/: CodeQuality.yml  Main.yml
benchmark/: README.md  benchmark_runner.cpp  interpreted_benchmark.cpp
benchmark/imdb/: imdb.cpp
benchmark/include/: benchmark.hpp  benchmark_configuration.hpp  benchmark_runner.hpp  interpreted_benchmark.hpp
extension/: extension_config.cmake
extension/autocomplete/: CMakeLists.txt  EXTENSIBLE_GRAMMAR_PLAN.md  autocomplete_extension.cpp  inline_grammar.py  keyword_helper.cpp  keyword_map.cpp  matcher.cpp  peg_parser_override.cpp
extension/peg_parser/: CMakeLists.txt  peg_parser_extension.cpp  peg_parser_override.cpp
extension/peg_parser/include/: peg_parser_extension.hpp  peg_parser_override.hpp  tokenizer.hpp
extension/peg_parser/include/parser/: peg_parser.hpp
extension/peg_parser/include/transformer/: parse_result.hpp  peg_transformer.hpp
extension/peg_parser/parser/: CMakeLists.txt  peg_parser.cpp
extension/peg_parser/transformer/: CMakeLists.txt  peg_transformer.cpp  transform_statement.cpp  transform_use.cpp
scripts/: build_peg_grammar.sh  generate_peg_transformer.py  test_peg_parser.py  transformer_progression_tracker.py  transformer_stub_generator.py
scripts/parser/: generate_transformer.py  generate_transformer_trampoline.py  transformer_plan.py
src/common/: CMakeLists.txt  enum_util.cpp  settings.json  shared_hash_join_table.cpp  types.cpp
src/execution/: physical_plan_generator.cpp
src/main/: client_context.cpp  (+3 more)
(+281 files in other folders)
